--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,53 @@
         <maven.compiler.source>1.8</maven.compiler.source>
    		<maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.springframework.version>4.3.1.RELEASE</org.springframework.version>
+        <org.springframework.data.version>1.7.2.RELEASE</org.springframework.data.version>
+        <org.hibernate.version>4.3.8.Final</org.hibernate.version>
+        <mysql.version>5.1.6</mysql.version>
+        <org.projectlombok.version>1.16.16</org.projectlombok.version>
+        <com.fasterxml.jackson.data.version>2.5.0</com.fasterxml.jackson.data.version>
     </properties>
+
+	<dependencies>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-webmvc</artifactId>
+		    <version>${org.springframework.version}</version>
+		</dependency>
+		
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${org.springframework.data.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${org.hibernate.version}</version>
+        </dependency>
+        
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${com.fasterxml.jackson.data.version}</version>
+		</dependency>
+        
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>${mysql.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${org.projectlombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
+	</dependencies>
 
 </project>
