Add ability to create boards

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <org.springframework.version>4.3.1.RELEASE</org.springframework.version>
         <org.springframework.data.version>1.7.2.RELEASE</org.springframework.data.version>
         <org.hibernate.version>4.3.8.Final</org.hibernate.version>
+        <org.hibernate.validator.version>4.0.2.GA</org.hibernate.validator.version>
+        <javax.validation.version>1.0.0.GA</javax.validation.version>
         <mysql.version>5.1.6</mysql.version>
         <org.projectlombok.version>1.16.16</org.projectlombok.version>
         <com.fasterxml.jackson.data.version>2.5.0</com.fasterxml.jackson.data.version>
@@ -40,6 +42,18 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${org.hibernate.version}</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${org.hibernate.validator.version}</version>
+		</dependency>
+        
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${javax.validation.version}</version>
+		</dependency>
         
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
