Update structure of application.properties and autowire as values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-# Database
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/taskmaster
-db.username=root
-db.password=password1
+database.driver=com.mysql.jdbc.Driver
+database.jndiPrefix=jdbc:mysql
 
-# Hibernate
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=false
-hibernate.format_sql=true
+database.hostname=localhost
+database.port=3306
+database.name=taskmaster
+database.username=root
+database.password=password1
+
+database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+database.hibernate.sql.show=false
+database.hibernate.sql.format=true
+database.hibernate.ejb.namingStrategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+database.domain.package=uk.co.tomfitton.taskmaster.backend.domain
